# MAI-Object-Oriented-Programming

./: README.md
lab1/: Budget.cpp  Budget.h  CMakeLists.txt  README.md  main.cpp  oop_lab1_report.docx  test2.txt  test3.txt
lab2/: CMakeLists.txt  README.md  TimePoint.cpp  TimePoint.h  main.cpp  oop_lab2_report.docx  test1.txt  test2.txt  test3.txt
lab3/: CMakeLists.txt  Figure.cpp  Figure.h  Hexagon.cpp  Hexagon.h  Pentagon.cpp  Pentagon.h  Point.cpp  Point.h  README.md  Rhombus.cpp  Rhombus.h  main.cpp  oop_lab3_report.docx  test1.txt  test2.txt
lab4/: CMakeLists.txt  Hexagon.h  Pentagon.h  README.md  Rhombus.h  main.cpp  oop_lab4_report.docx
lab5/: CMakeLists.txt  README.md  main.cpp  oop_lab5_report.docx  rhombus.h  stack.h  test1.txt  test2.txt
lab6/: CMakeLists.txt  README.md  allocator.h  main.cpp  oop_lab6_report.docx  rhombus.h  stack.h  test1.txt  test2.txt
lab7/: CMakeLists.txt  README.md  document.h  factory.h  figure.h  hexagon.h  main.cpp  oop_lab7_report.docx  pentagon.h  rhombus.h  test1.txt  test2.txt
lab8/: README.md  factory.h  figure.h  hexagon.h  main.cpp  oop_lab8_report.docx  pentagon.h  rhombus.h  server.h  test1.txt  test2.txt
